📦: GitHub Unstar Pro

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "description": "CLI tool to unstar GitHub repositories",
     "bin": {
-        "github-unstar-pro": "./bin/github-unstar-pro.js"
+        "github-unstar-pro": "bin/github-unstar-pro.js"
     },
     "dependencies": {
-        "@octokit/core": "^3.5.1"
+        "@octokit/core": "^3.5.1",
+        "github-unstar-pro": "^1.0.0"
     },
     "author": "Danish Saleem",
     "license": "MIT"
