--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
     "name": "github-unstar-pro",
     "version": "2.0.0",
-    "description": "CLI tool to unstar GitHub repositories",
-    "bin": {
-        "github-unstar-pro": "bin/github-unstar-pro.js"
-    },
-    "dependencies": {
-        "@octokit/core": "^3.5.1",
-        "github-unstar-pro": "^1.0.1"
+    "description": "Unstar all Github repositories using a personal access token",
+    "main": "index.js",
+    "repository": "mrdanishsaleem/github-unstar-pro",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Danish Saleem",
-    "license": "MIT"
+    "license": "ISC",
+    "bin": {
+        "github-unstar": "./index.js"
+    },
+    "keywords": [
+        "node"
+    ],
+    "files": [
+        "index.js"
+    ],
+    "dependencies": {
+        "@octokit/core": "^3.5.1",
+        "inquirer": "^8.2.0"
+    },
+    "devDependencies": {}
 }
